--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Experimental SystemJS/Yarn integration",
   "main": "index.js",
   "scripts": {
+    "start": "node src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/alexisvincent/systemjs-yarn-integration/issues"
   },
-  "homepage": "https://github.com/alexisvincent/systemjs-yarn-integration#readme"
+  "homepage": "https://github.com/alexisvincent/systemjs-yarn-integration#readme",
+  "dependencies": {
+    "js-yaml": "^3.6.1",
+    "yarn": "^0.16.1"
+  }
 }
